Basic login setup

--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 NODE_PATH=./src
-REACT_APP_NAME=React Reduction
-REACT_APP_DESCRIPTION=React version of Reduction Admin Template
+REACT_APP_NAME=eWallet
+REACT_APP_DESCRIPTION=eWallet using Reduction Admin Template
 REACT_APP_URL=/
-REACT_APP_SOURCE_URL=https://github.com/reduction-admin/react-reduction
+REACT_APP_SOURCE_URL=https://github.com/webkrrish/eWallet
+LOGIN_EMAIL=krishna@alykas.com
+LOGIN_PASSWORD=krishna@123
