--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "react-icons": "^2.2.7",
     "react-infinite-calendar": "^2.3.1",
     "react-notification-system": "^0.2.17",
+    "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-simple-maps": "^0.11.2",
     "react-sizeme": "^2.3.6",
     "react-transition-group": "^2.2.1",
     "reactstrap": "^5.0.0",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "victory": "^0.24.0"
   },
   "devDependencies": {
