--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "bootstrap": "4.0.0",
     "chart.js": "^2.7.2",
     "classnames": "^2.2.5",
     "d3-geo": "^1.9.1",
     "faker": "^4.1.0",
+    "jsonwebtoken": "^8.2.1",
+    "nodemailer": "^4.6.4",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-chartjs-2": "^2.7.0",
@@ -33,6 +36,7 @@
     "node-sass-chokidar": "^1.1.0",
     "npm-run-all": "^4.1.2",
     "react-scripts": "1.1.1",
+    "redux-logger": "^3.0.6",
     "serve": "^6.4.1",
     "stylelint": "^8.2.0",
     "stylelint-config-recommended-scss": "^2.0.0",
