Login setup with few bugs

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "body-parser": "^1.18.2",
     "bootstrap": "4.0.0",
     "chart.js": "^2.7.2",
     "classnames": "^2.2.5",
